Fix products that were outside screen when using website on small screen (responsive design) by making images smaller. Change logo to by in the center when collapsing the navbar menu which happens when screen width reaches a specific pixel value.

--- a/frontend/src/css/Layout.css
+++ b/frontend/src/css/Layout.css
@@ -15,3 +15,14 @@ nav img {
 .custom-divider {
   margin-top: -12px;
 }
+
+@media screen and (max-width: 992px) {
+  .logo-container {
+    width: 100%;
+    text-align: center;
+  }
+
+  .logo-container img {
+    padding-left: 0px;
+  }
+}
